src/test/ui/macros/macro-name-typo.stderr
error: cannot find macro `printlx!` in this scope
  --> $DIR/macro-name-typo.rs:12:5
   |
12 |     printlx!("oh noes!");
   |     ^^^^^^^ help: you could try the macro: `println!`

error: aborting due to previous error

